--- a/app/views/dashboard/perfil/facebook.html
+++ b/app/views/dashboard/perfil/facebook.html
@@ -10,7 +10,7 @@
 					</div>
 
 					<div class="form-group">
-						<input type="password" class="form-control input-underline input-lg" id="" placeholder="Password">
+						<input type="file" class="form-control input-underline input-lg" id="" placeholder="Password">
 					</div>
 				</div>
 
