--- a/app/views/dashboard.html
+++ b/app/views/dashboard.html
@@ -11,7 +11,7 @@
 
       <ul class="nav nav-sidebar">
         <li ng-class="{active: $state.includes('miPerfil')}"><a ui-sref="miPerfil">Mi Perfil<span class="sr-only">(current)</span></a></li>
-        <li ng-class="{active: $state.includes('reports')}"><a ui-sref="reports">Reports</a></li>
+        <li ng-class="{active: $state.includes('productos')}"><a ui-sref="productos">Productos</a></li>
       </ul>
 
     </div>
