agrege un par de paginas

--- a/app/views/dashboard/products.html
+++ b/app/views/dashboard/products.html
@@ -15,5 +15,5 @@
 			</table>
 		</div>
 	</div>
-	<a class="btn btn-primary btn-outline">Nuevo</a>
+	<a ui-sref="products/addProducts" class="btn btn-primary btn-outline">Nuevo</a>
 </div>
