pruebas en producto de ajax con angular

--- a/app/views/dashboard/products.html
+++ b/app/views/dashboard/products.html
@@ -4,11 +4,11 @@
 	<div class="jumbotron">
 		<div class="container" >
 
-			<table ng-repeat="libro in libros">
+			<table ng-repeat="libro in names">
 				<tr>
-					<td>{{libro.id}} - </td>   
-					<td>{{libro.titulo}} - </td>
-					<td>{{libro.autor}} | </td>
+					<td>{{libro.Name}} - </td>   
+					<td>{{libro.City}} - </td>
+					<td>{{libro.Country}} | </td>
 					<td><a href="" ng-click="modificar()">Modificar | </a></td>
 					<td><a href="" ng-click="publicar()">Publicar</a></td>
 				</tr>
