--- a/app/views/dashboard/products/publishProducts.html
+++ b/app/views/dashboard/products/publishProducts.html
@@ -1,9 +1,9 @@
 <div>
-	<h2>Agregar Producto</h2>
+	<h2>Publicar Producto</h2>
 	<span class="glyphicon glyphicon-pencil bg-fade"></span>
 		<div class="jumbotron" style="background-color:#3CA2E0">
 		<div class="container">
-			<form role="form" ng-submit="submit()">
+			<form role="form" ng-submit="submit()"> 
 
 				<div class="form-content">
 					<div class="form-group">
