--- a/app/views/dashboard/miPerfil.html
+++ b/app/views/dashboard/miPerfil.html
@@ -1,7 +1,7 @@
 <div>
 	<a ui-sref="miPerfil/facebook" class="btn btn-primary btn-outline">FaceBook</a>
-	<a ui-sref="" class="btn btn-primary btn-outline">Twitter</a>
-	<a ui-sref="" class="btn btn-primary btn-outline">Mercado Libre</a>
+	<!--<a ui-sref="" class="btn btn-primary btn-outline">Twitter</a>-->
+	<!--<a ui-sref="" class="btn btn-primary btn-outline">Mercado Libre</a>-->
 	<div class="jumbotron" style="background-color:#3CA2E0">
 		<div class="container">
 			<form role="form" ng-submit="submit()">
