nuevos cambios en el publish

--- a/app/views/dashboard/products.html
+++ b/app/views/dashboard/products.html
@@ -12,7 +12,7 @@
 					<td>{{product.codigo}} - </td>
 					<td>{{product.descripcion}} | </td>
 					<td><a href="" ng-click="modificar()">Modificar | </a></td>
-					<td><a href="" ng-click="publicar()">Publicar</a></td>
+					<td><a href="" ng-click="publicar(product.id)">Publicar</a></td>
 				</tr>
 			</table>
 		</div>
