cambios en el addProduct (falat post a la url)

--- a/app/views/dashboard.html
+++ b/app/views/dashboard.html
@@ -11,7 +11,7 @@
 
       <ul class="nav nav-sidebar">
         <li ng-class="{active: $state.includes('miPerfil')}"><a ui-sref="miPerfil">Mi Perfil<span class="sr-only">(current)</span></a></li>
-        <li ng-class="{active: $state.includes('products')}"><a ui-sref="products">Redes sociales</a></li>
+        <li ng-class="{active: $state.includes('products')}"><a ui-sref="products">Productos</a></li>
 
         <li ng-class="{active: $state.includes('orders')}"><a ui-sref="orders">Ordenes</a></li>
 
