--- a/app/views/dashboard/products/addProducts.html
+++ b/app/views/dashboard/products/addProducts.html
@@ -3,7 +3,7 @@
 	<span class="glyphicon glyphicon-pencil bg-fade"></span>
 		<div class="jumbotron" style="background-color:#3CA2E0">
 		<div class="container">
-			<form role="form" ng-submit="submit()">
+			<form role="form" ng-submit="submit(product)">
 
 				<div class="form-content">
 					<div class="form-group">
