anavces en alta y bajas de productos

--- a/app/views/dashboard/miPerfil.html
+++ b/app/views/dashboard/miPerfil.html
@@ -1,10 +1,10 @@
 <div>
 
 	<a ui-sref="miPerfil/facebook" class="btn btn-primary btn-outline">FaceBook</a>
-	<a ui-sref="" class="btn btn-primary btn-outline">Redes Sociales</a>
-	<a ui-sref="" class="btn btn-primary btn-outline">Market Places</a>
-	<a ui-sref="" class="btn btn-primary btn-outline">Shipping Methods</a>
-	<a ui-sref="" class="btn btn-primary btn-outline">Medios de Pago</a>
+	<a ui-sref="#" class="btn btn-primary btn-outline">Redes Sociales</a>
+	<a ui-sref="#" class="btn btn-primary btn-outline">Market Places</a>
+	<a ui-sref="#" class="btn btn-primary btn-outline">Shipping Methods</a>
+	<a ui-sref="#" class="btn btn-primary btn-outline">Medios de Pago</a>
 	
 	<div class="jumbotron" style="background-color:#3CA2E0">
 		<div class="container">
