--- a/app/views/dashboard.html
+++ b/app/views/dashboard.html
@@ -13,7 +13,7 @@
         <li ng-class="{active: $state.includes('miPerfil')}"><a ui-sref="miPerfil">Mi Perfil<span class="sr-only">(current)</span></a></li>
         <li ng-class="{active: $state.includes('products')}"><a ui-sref="products">Productos</a></li>
 
-        <li ng-class="{active: $state.includes('orders')}"><a ui-sref="orders">Ordenes</a></li>
+        <li ng-class="{active: $state.includes('orders')}"><a ui-sref="orders">Mis Ventas</a></li>
 
       </ul>
 
