--- a/app/views/dashboard/products.html
+++ b/app/views/dashboard/products.html
@@ -9,11 +9,11 @@
 					<td>{{product.nombre}} - </td>   
 					<td>{{product.codigo}} - </td>
 					<td>{{product.stock}} - </td>
-					<td>{{product.codigo}} - </td>
+					<td>{{product.precio}} - </td>
 					<td>{{product.descripcion}} | </td>
 					<td><a href="" ng-click="edit(product.id)">Modificar | </a></td>
 					<td><a href="" ng-click="publish(product.id)">Publicar</a></td>
-					<td><a href="" ng-click="delete(product.id)">Borrar</a></td>
+					<td><a href="" ng-click="delete(product)">Borrar</a></td>
 				</tr>
 			</table>
 		</div>
