--- a/app/views/dashboard/products/editProducts.html
+++ b/app/views/dashboard/products/editProducts.html
@@ -1,5 +1,5 @@
 <div>
-	<h2>Agregar Producto</h2>
+	<h2>Modificar Producto</h2>
 	<span class="glyphicon glyphicon-pencil bg-fade"></span>
 		<div class="jumbotron" style="background-color:#3CA2E0">
 		<div class="container">
