--- a/app/views/dashboard/products.html
+++ b/app/views/dashboard/products.html
@@ -4,7 +4,8 @@
 	<div class="jumbotron">
 		<div class="container" >
 
-			<table ng-repeat="product in products">
+			<table ng-repeat="product in products" st-table="rowCollection" class="table table-striped">
+				
 				<tr>
 					<td>{{product.nombre}} - </td>   
 					<td>{{product.codigo}} - </td>
@@ -20,3 +21,46 @@
 	</div>
 	<a ui-sref="products/addProducts" class="btn btn-primary btn-outline">Nuevo</a>
 </div>
+
+
+
+
+
+<form>
+	<label for="predicate">selected predicate:</label>
+	<select class="form-control" id="predicate" ng-model="selectedPredicate" ng-options="predicate for predicate in predicates"></select>
+</form>
+<table st-table="rowCollection" class="table table-striped">
+	<thead>
+	<tr>
+		<th st-sort="firstName">first name</th>
+		<th st-sort="lastName">last name</th>
+		<th st-sort="birthDate">birth date</th>
+		<th st-sort="balance">balance</th>
+		<th>email</th>
+	</tr>
+	<tr>
+		<th>
+			<input st-search="firstName" placeholder="search for firstname" class="input-sm form-control" type="search"/>
+		</th>
+		<th colspan="3">
+			<input st-search placeholder="global search" class="input-sm form-control" type="search"/>
+		</th>
+		<th>
+			<input st-search="{{selectedPredicate}}" placeholder="bound predicate" class="input-sm form-control" type="search"/>
+		</th>
+	</tr>
+	</thead>
+	<tbody>
+	<tr ng-repeat="row in rowCollection">
+		<td>{{row.firstName | uppercase}}</td>
+		<td>{{row.lastName}}</td>
+		<td>{{row.birthDate | date}}</td>
+		<td>{{row.balance | currency}}</td>
+		<td><a ng-href="mailto:{{row.email}}">email</a></td>
+	</tr>
+	</tbody>
+</table>
+
+
+
