--- a/app/views/dashboard/products.html
+++ b/app/views/dashboard/products.html
@@ -4,63 +4,46 @@
 	<div class="jumbotron">
 		<div class="container" >
 
-			<table ng-repeat="product in products" st-table="rowCollection" class="table table-striped">
-				
-				<tr>
-					<td>{{product.nombre}} - </td>   
-					<td>{{product.codigo}} - </td>
-					<td>{{product.stock}} - </td>
-					<td>{{product.precio}} - </td>
-					<td>{{product.descripcion}} | </td>
-					<td><a href="" ng-click="edit(product.id)">Modificar | </a></td>
-					<td><a href="" ng-click="publish(product.id)">Publicar</a></td>
-					<td><a href="" ng-click="delete(product)">Borrar</a></td>
-				</tr>
-			</table>
+				<table st-table="displayedCollection" st-safe-src="products" class="table table-striped">
+			<thead>
+			<tr>
+				<th st-sort="nombre">Nombre</th>
+				<th st-sort="codigo">Codigo</th>
+				<th st-sort="precio">Precio</th>
+				<th st-sort="stock">Stock</th>
+			</tr>
+			<tr>
+				<th colspan="5"><input st-search="" class="form-control" placeholder="global search ..." type="text"/></th>
+			</tr>
+			</thead>
+			<tbody>
+			<tr ng-repeat="row in displayedCollection">
+				<td>{{row.nombre}}</td>
+				<td>{{row.codigo}}</td>
+				<td>{{row.precio}}</td>
+				<td>{{row.stock}}</td>
+				<td>
+				<button type="button" ng-click="delete(row)" class="btn btn-sm btn-danger">
+					<i class="glyphicon glyphicon-pencil">
+					</i>
+				</button>
+				</td>
+				<td>
+				<button type="button" ng-click="removeItem(row)" class="btn btn-sm btn-danger">
+					<i class="glyphicon glyphicon-remove-circle">
+					</i>
+				</button>
+				</td>
+				<td>
+				<button type="button" ng-click="removeItem(row)" class="btn btn-sm btn-danger">
+					<i class="glyphicon glyphicon-hand-up">
+					</i>
+				</button>
+				</td>
+			</tr>
+			</tbody>
+		</table>
 		</div>
 	</div>
 	<a ui-sref="products/addProducts" class="btn btn-primary btn-outline">Nuevo</a>
 </div>
-
-
-
-
-
-<form>
-	<label for="predicate">selected predicate:</label>
-	<select class="form-control" id="predicate" ng-model="selectedPredicate" ng-options="predicate for predicate in predicates"></select>
-</form>
-<table st-table="rowCollection" class="table table-striped">
-	<thead>
-	<tr>
-		<th st-sort="firstName">first name</th>
-		<th st-sort="lastName">last name</th>
-		<th st-sort="birthDate">birth date</th>
-		<th st-sort="balance">balance</th>
-		<th>email</th>
-	</tr>
-	<tr>
-		<th>
-			<input st-search="firstName" placeholder="search for firstname" class="input-sm form-control" type="search"/>
-		</th>
-		<th colspan="3">
-			<input st-search placeholder="global search" class="input-sm form-control" type="search"/>
-		</th>
-		<th>
-			<input st-search="{{selectedPredicate}}" placeholder="bound predicate" class="input-sm form-control" type="search"/>
-		</th>
-	</tr>
-	</thead>
-	<tbody>
-	<tr ng-repeat="row in rowCollection">
-		<td>{{row.firstName | uppercase}}</td>
-		<td>{{row.lastName}}</td>
-		<td>{{row.birthDate | date}}</td>
-		<td>{{row.balance | currency}}</td>
-		<td><a ng-href="mailto:{{row.email}}">email</a></td>
-	</tr>
-	</tbody>
-</table>
-
-
-
