--- a/app/views/dashboard/products.html
+++ b/app/views/dashboard/products.html
@@ -26,7 +26,7 @@
 							<div class="btn-group" role="group" aria-label="...">
 								<button ng-click="view(row.id)" type="button" class="btn btn-default">
 								<i class="glyphicon glyphicon-eye-open"></i></button>
-								<button ng-click="edit(row.id)" type="button" class="btn btn-default"><i class="glyphicon glyphicon-pencil"></i></button>
+								<button ng-click="edit(row)" type="button" class="btn btn-default"><i class="glyphicon glyphicon-pencil"></i></button>
 								<button ng-click="delete(row)" type="button" class="btn btn-default"><i class="glyphicon glyphicon-remove-circle"></i></button>
 								<button ng-click="publish(row.id)" type="button" class="btn btn-default"><i class="glyphicon glyphicon-cloud-upload"></i></button>
 							</div>
