cambios menores en la vista

--- a/app/views/dashboard/products/editProducts.html
+++ b/app/views/dashboard/products/editProducts.html
@@ -1,11 +1,12 @@
 <div>
-	<h2>Modificar Producto</h2>
+	<h2>Modificar Producto id: {{product.id}}</h2>
 	<span class="glyphicon glyphicon-pencil bg-fade"></span>
 		<div class="jumbotron" style="background-color:#3CA2E0">
 		<div class="container">
 			<form role="form" ng-submit="submit(product)">
 
 				<div class="form-content">
+
 					<div class="form-group">
 						<input type="text" class="form-control input-underline input-lg" ng-model="product.nombre" placeholder="Nombre del Producto">
 					</div>
