--- a/app/views/dashboard.html
+++ b/app/views/dashboard.html
@@ -14,6 +14,7 @@
         <li ng-class="{active: $state.includes('products')}"><a ui-sref="products">Productos</a></li>
 
         <li ng-class="{active: $state.includes('orders')}"><a ui-sref="orders">Mis Ventas</a></li>
+        <li ng-class="{active: $state.includes('cupones')}"><a ui-sref="cupones">Mi Cuponera</a></li>
 
       </ul>
 
