--- a/app/views/login.html
+++ b/app/views/login.html
@@ -19,6 +19,7 @@ Inspired by http://dribbble.com/shots/917819-iPad-Calendar-Login?list=shots&sort
 				</div>
 
 				<button type="submit" class="btn btn-white btn-outline btn-lg btn-rounded">Login</button>
+				<button type="button" class="btn btn-white btn-outline btn-lg btn-rounded" ng-click="signUp()">Sign Up For Free</button>
 
 			</form>
 
